--- a/index.html
+++ b/index.html
@@ -7,9 +7,20 @@
     <title>Vite App</title>
   </head>
   <body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <div class="experience">
       <canvas class="experience-canvas"></canvas>
     </div>
+    <div class="preloader-wrap">
+      <div class="percentage" id="precent"></div>
+      <div class="loader">
+        <div class="trackbar">
+          <div class="loadbar"></div>
+        </div>
+        <div class="glow"></div>
+      </div>
+    </div>
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
