--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script type="module" src="/main.js" defer></script>
     <title>Vite App</title>
   </head>
   <body>
@@ -11,16 +12,17 @@
     <div class="experience">
       <canvas class="experience-canvas"></canvas>
     </div>
-    <div class="preloader-wrap">
-      <div class="percentage" id="precent"></div>
+    <div id="rotator" style="height:100px;width:100px"></div>
+
+    <!-- <div class="preloader-wrap">
+
       <div class="loader">
         <div class="trackbar">
           <div class="loadbar"></div>
         </div>
         <div class="glow"></div>
       </div>
-    </div>
+    </div> -->
 
-    <script type="module" src="/main.js"></script>
   </body>
 </html>
