--- a/index.html
+++ b/index.html
@@ -14,15 +14,12 @@
     </div>
     <div id="rotator" style="height:100px;width:100px"></div>
 
-    <!-- <div class="preloader-wrap">
-
-      <div class="loader">
-        <div class="trackbar">
-          <div class="loadbar"></div>
-        </div>
-        <div class="glow"></div>
-      </div>
-    </div> -->
-
+    <!-- <p class="text-intro">
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid aperiam sed dicta consequuntur? A veniam repellendus sed, quis praesentium modi eos quisquam perferendis voluptates eius, ex odio quod laboriosam culpa?Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      <br><br>
+       Amet ut in fugit, totam cumque doloribus fuga sint vitae, est, delectus possimus repellat cupiditate autem illo quam consectetur tempore velit. Perferendis.
+    </p>
+    <button id="nextBtn">Siguiente</button> -->
   </body>
+
 </html>
