Camara interactica actualizada
opcion de volver a la posicion de origen

--- a/index.html
+++ b/index.html
@@ -6,20 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="/main.js" defer></script>
     <title>Vite App</title>
+    <style>
+      button{
+
+      }
+    </style>
   </head>
+  
   <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <div class="experience">
+      <button style="position: absolute; background:transparent;">Volver al inicio</button>
       <canvas class="experience-canvas"></canvas>
     </div>
     <div id="rotator" style="height:100px;width:100px"></div>
 
-    <!-- <p class="text-intro">
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid aperiam sed dicta consequuntur? A veniam repellendus sed, quis praesentium modi eos quisquam perferendis voluptates eius, ex odio quod laboriosam culpa?Lorem ipsum dolor sit amet consectetur adipisicing elit.
-      <br><br>
-       Amet ut in fugit, totam cumque doloribus fuga sint vitae, est, delectus possimus repellat cupiditate autem illo quam consectetur tempore velit. Perferendis.
-    </p>
-    <button id="nextBtn">Siguiente</button> -->
   </body>
 
 </html>
