--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
   
   <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <div class="loader">
+      <div class="loadercolor">
+        <img src="./public/img/logoloader/logoloadercolor.jpg" alt="logoloadergrey.jpg" class="logoloader">
+        <h3 style="z-index: 5;">Cargando <span class="percentage" id="percentage"></h3>
+      </div>
+    </div>
     <div class="experience">
       <button style="position: absolute; background:transparent;">Volver al inicio</button>
       <canvas class="experience-canvas"></canvas>
