--- a/index.html
+++ b/index.html
@@ -3,21 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="module" src="/main.js" defer></script>
+    <link rel="stylesheet" href="style.css">
+    <script type="module" src="main.js" defer></script>
     <title>Vite App</title>
-    <style>
-
-    </style>
   </head>
   
   <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <div class="loader">
       <div class="loadercolor">
-        <img src="./public/img/logoloader/logoloadercolor.jpg" alt="logoloadergrey.jpg" class="logoloader">
+        <img src="/img/logoloader/logoloadercolor.jpg" alt="logoloadergrey.jpg" class="logoloader">
         <h3 style="z-index: 5;">Cargando <span class="percentage" id="percentage"></h3>
 
-        <a id="enlace" href="a.html"></a>
+        <a id="enlace" href="/header.html"></a>
         
       </div>
     </div>
