forms and styles

--- a/public/header.html
+++ b/public/header.html
@@ -13,7 +13,7 @@
         <nav>
             <ul class="header-links">
                 <li class="header-logo">
-                    <a href="#">
+                    <a href="inicio.html">
                         <img src="./img/logo/logo.png" alt="logo" class="logo">
                         <h1 class="title">Modelarium</h1>
                     </a>
@@ -48,7 +48,7 @@
                         </a>
                     </li>
                     <li class="header-link user-link">
-                        <a href="#">
+                        <a href="profile.html">
                             <img class="link-icon" src="./img/icons/profile.svg" alt="profile.png">
                         </a>
                     </li>
@@ -56,6 +56,6 @@
             </ul>
         </nav>
     </header>
-    <a href="../index.html">Enga dale aqui pa volver</a>
+
 </body>
 </html>
