--- a/public/creatorform.html
+++ b/public/creatorform.html
@@ -20,7 +20,8 @@
                 <div class="input-container">
                     <input type="email" name="email" id="email" placeholder="Paypal Email Adress"> <span class="required">*</span>
                 </div>
-                <span class="textinfo">In case you sell any of the models is uploaded the money wil be sent to this Paypal address</span>
+                <span class="textinfo">In case you sell any of the models is uploaded the 
+                    m0oney wil be sent to this Paypal address</span>
             </div>
 
             <div class="creator-form-section">
