interaccion con objetos 3d terminada
ahora el ipad tambien es funcional

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
         <a id="arcadelink" href="https://modelarium3d.000webhostapp.com/html/contact.html"></a>
         <a id="pclink" href="https://modelarium3d.000webhostapp.com"></a>
+        <a id="ipadlink" href="https://modelarium3d.000webhostapp.com/html/aboutUs.html"></a>
       </div>
     </div>
     <div class="experience">
