--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </canvas>
     </div>
     <div id="rotator" style="height:100px;width:100px"></div>
-
+    <img src="" alt="">
   </body>
 
 </html>
