--- a/public/html/aboutUs.html
+++ b/public/html/aboutUs.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="../js/main.js" defer></script>
-    <link rel="stylesheet" href="../style.css">
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../scss/about.scss">
+    <link rel="stylesheet" href="../css/about.css">
 
     <title>Model</title>
 </head>
