--- a/public/html/author.html
+++ b/public/html/author.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="../js/main.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../scss/profile.scss">
+    <link rel="stylesheet" href="../css/profile.css">
 
     <title>Profile</title>
 </head>
