--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
-    <link rel="stylesheet" href="scss/landing.scss">
+    <link rel="stylesheet" href="css/landing.css" >
     <title>Prueba inicio</title>
 </head>
 <body class="landingbody">
     <header>
-        <a href="../index.html" class="landing-link defaultbtn smodels room transition">Room</a>
+        <a href="../" class="landing-link defaultbtn smodels room transition">Room</a>
         <div class="landing-user-opt">
             <a href="/html/loginform.html" class="landing-link defaultbtn login transition">Login</a>
             <a href="/html/registerform.html" class="landing-link defaultbtn smodels transition">Register</a>
