cambio de nombre
cambio en el nombre de archivo de la landing para evitar errores de ambigüedad

--- a/public/html/aboutUs.html
+++ b/public/html/aboutUs.html
@@ -29,7 +29,7 @@
                     <span>|</span>
                 </li>
                 <li class="dnoneresponsive header-link">
-                    <a href="../index.html">Home</a>
+                    <a href="../landing.html">Home</a>
                 </li>
                 <li class="dnoneresponsive header-link">
                     <a href="models.html">Models</a>
