--- a/public/html/profilesettings.html
+++ b/public/html/profilesettings.html
@@ -34,7 +34,7 @@
                     <span>|</span>
                 </li>
                 <li class="dnoneresponsive header-link">
-                    <a href="../index.html">Home</a>
+                    <a href="../landing.html">Home</a>
                 </li>
                 <li class="dnoneresponsive header-link">
                     <a href="models.html">Models</a>
@@ -83,7 +83,7 @@
                 <div id="general-menu-section">
 
                     <li>
-                        <a class="transition" href="../index.html">
+                        <a class="transition" href="../landing.html">
                             <img class="link-icon" src="../img/icons/home.svg" alt="home.svg">
                             <span>Home</span>
                         </a>
