--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h3 style="z-index: 5;">Cargando <span class="percentage" id="percentage"></h3>
 
         <a id="arcadelink" href="/html/contact.html"></a>
-        <a id="pclink" href="landing.html"></a>
+        <a id="pclink" href="/html/landing.html"></a>
         <a id="ipadlink" href="/html/aboutUs.html"></a>
       </div>
     </div>
