--- a/public/html/creatorform.html
+++ b/public/html/creatorform.html
@@ -29,7 +29,7 @@
                     <span>|</span>
                 </li>
                 <li class="dnoneresponsive header-link">
-                    <a href="../landing.html">Home</a>
+                    <a href="landing.html">Home</a>
                 </li>
                 <li class="dnoneresponsive header-link">
                     <a href="models.html">Models</a>
@@ -78,7 +78,7 @@
                 <div id="general-menu-section">
 
                     <li>
-                        <a class="transition" href="../landing.html">
+                        <a class="transition" href="landing.html">
                             <img class="link-icon" src="../img/icons/home.svg" alt="home.svg">
                             <span>Home</span>
                         </a>
