--- a/public/html/landing.html
+++ b/public/html/landing.html
@@ -7,15 +7,15 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
-    <link rel="stylesheet" href="css/landing.css" >
+    <link rel="stylesheet" href="../css/landing.css" >
     <title>Prueba inicio</title>
 </head>
 <body class="landingbody">
     <header>
-        <a href="../" class="landing-link defaultbtn smodels room transition">Room</a>
+        <a href="../../" class="landing-link defaultbtn smodels room transition">Room</a>
         <div class="landing-user-opt">
-            <a href="/html/loginform.html" class="landing-link defaultbtn login transition">Login</a>
-            <a href="/html/registerform.html" class="landing-link defaultbtn smodels transition">Register</a>
+            <a href="loginform.html" class="landing-link defaultbtn login transition">Login</a>
+            <a href="registerform.html" class="landing-link defaultbtn smodels transition">Register</a>
         </div>
     </header>
     <div class="landing">
@@ -24,7 +24,7 @@
         </div>
         <p class="landing-text">Welcome to Modelarium 3D, your one-stop shop for incredible high-quality 3D models. Explore our meticulously curated collection and find the perfect models to enhance your projects. Join our thriving creative community and unleash your imagination in the world of 3D art. Start creating with Modelarium 3D today!</p>
         <div class="buttons">
-            <a href="./html/models.html" class="landing-link defaultbtn smodels transition">See models</a>
+            <a href="models.html" class="landing-link defaultbtn smodels transition">See models</a>
 
         </div>
     </div>
